simple auto commit

--- a/app/template/new/product_200.html
+++ b/app/template/new/product_200.html
@@ -41,14 +41,12 @@
 		<div class="showknow-container" style="display: none;">
 			<div class="know-content">
 			<h4>1.承保年龄</h4>
-			<p>投保年龄为18至60周岁。</p>
+			<p>豪华版投保年龄为：30天-90周岁；至尊版投保年龄为：16岁-64周岁。</p>
 			<h4>2.合同生效日</h4>
-			<p>保险合同生效日以您投保次日零时开始。</p>
-			<h4>3.等待期</h4>
-			<p>被保险人首次投保，等待期为90天。</p>
-			<h4 class="hide">4.保障期限</h4>
-			<p class="hide">保障期间为1年。</p>
-			<h4 class="hide">5.限投份数</h4>
+			<p>本保险合同自您成功购买保险的次日零时开始生效，自生效日零时起开始承担保险责任。</p>
+			<h4>3.保障期限</h4>
+			<p>保障期间为1年。</p>
+			<h4 class="hide">4.限投份数</h4>
 			<p class="hide">每位被保险人最多投保一份，多投无效。</p>
 			</div>
 			<div class="more-1-container ">
@@ -56,7 +54,7 @@
 			</div>
 
 			<div class="button-container">
-				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/248" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+				<div class="left"><a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/251" class="weui_btn weui_btn_plain_more">产品条款</a></div>
 				<div class="right"><a href="http://web.youbaowuxian.com/#/claim_information?claim_id=39" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
 			</div>
 
@@ -65,42 +63,42 @@
 			<ul >
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>我购买了其他的重疾险，如果再购买的话是否可以重复理赔？</div>	</div>	
+				<div class="qa-content"><div>航空意外伤害保险和短期公共交通意外保险可以同时购买吗？</div>	</div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>是可以重复理赔的</div>	
+					<div>您好，可以的，这两份保险互相没有影响，请放心购买。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>请问该款产品有犹豫期吗？生效后的等待期是多久？</div></div>	
+				<div class="qa-content"><div>私家车这一类，就是自己开车和做别人的车这种情况属于哪一类，赔多少？</div></div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>该产品没有犹豫期，生效后等待期为90天。</div>	
+					<div>您好，该产品的豪华版只保障公共交通意外事故，建议您购买至尊版，至尊版除了公共交通意外保险责任还包含道路交通及意外医疗的保障责任，道路交通意外责任的保额是20万，意外医疗责任是1万元。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>这款产品由职业限制吗？</div></div>	
+				<div class="qa-content"><div>请问高铁在范围内吗？</div></div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>这款保险产品对被保险人的职业没有限制。</div>	
+					<div>您好，轨道交通都是在保障范围之内的，请您放心投保。</div>	
 				</div>
 			</li>
 			<li class="qa-item  question hide">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>该款产品可以保证续保吗？</div></div>	
+				<div class="qa-content"><div>道路交通意外包括被保险人以行人身份走在路上而发生的交通事故吗？</div></div>	
 			</li>
 			<li class="qa-item answer hide">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>这款产品不保证续保，保险期间满前，会审核被保险人是否符合续保条件，满足条件后才可续保。</div>
+					<div>您好，道路交通意外是指车辆在公路、城市道路和虽在单位管辖范围但允许社会机动车通行的地方因过错或者意外造成的被保险人人身受到伤害的意外事故，具体的结果一般还需交通部门或公安部门做出核定。</div>
 				</div>
 			</li>
 			<li class="qa-item  question hide">
@@ -110,7 +108,7 @@
 			<li class="qa-item answer hide">
 				<div class="qa-icon" ></div>	
 				<div class="qa-content">
-					<div>这款保险产品不支持指定受益人，本合同的保险受益人为被保险人本人。</div>	
+					<div>这款保险产品不支持指定受益人，只能为法定受益人。</div>	
 				</div>
 			</li>
 			</ul>
