--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -40,10 +40,10 @@
 			<div class="supply-info" ng-show="data.address || data.car_no || data.destination || data.flight_no || data.bank">
 
 			<!-- <div class="supply-info" > -->
-			<div class="title" ><i class="iconfont" style="color: #999;font-size: 17px;margin-right: 10px;vertical-align: -1px;">&#xe611;</i>补充信息</div>
+			<div class="title" ><i class="iconfont" style="color: #999;font-size: 17px;margin-right: 5px;vertical-align: -1px;">&#xe611;</i>补充信息</div>
 			<div class="new-supply-item" >
 				<div class="introd">职业</div>
-				<div class="content"><select class="content" id="job"><option >请选择职业</option><option data-value="{{jobs.job_id}}" ng-repeat="jobs in data.jobs">{{jobs.job_name}}</option></select></div>
+				<div class="content"><select class="content" ><option id="first_option_color">请选择职业</option><option data-value="{{jobs.job_id}}" ng-repeat="jobs in data.jobs">{{jobs.job_name}}</option></select></div>
 				<div class="danwei"><i class="iconfont" style="color: #ccc;font-size: 17px;margin-left: 10px;">&#xe60f;</i></div>
 			</div>
 			<div class="new-supply-item" ng-if="data.email">
@@ -53,15 +53,18 @@
 			<div data-toggle="distpicker" ng-show="data.prov_city_id">
 				<div class="new-supply-item">
 					<div class="introd">居住省份</div>
-					<select class="content" id="province1"></select>
+					<select class="content city" id="province1"></select>
+					<div class="danwei"><i class="iconfont" style="color: #ccc;font-size: 17px;margin-left: 10px;">&#xe60f;</i></div>
 				</div>
 				<div class="new-supply-item">
 					<div class="introd">居住市</div>
-					<select class="content" id="city1"></select>
+					<select class="content city" id="city1"></select>
+					<div class="danwei"><i class="iconfont" style="color: #ccc;font-size: 17px;margin-left: 10px;">&#xe60f;</i></div>
 				</div>
 				<div class="new-supply-item">
-					<div class="introd">居住县/区</div>
-					<select class="content" id="district1"></select>
+					<div class="introd ">居住县/区</div>
+					<select class="content city" id="district1"></select>
+					<div class="danwei"><i class="iconfont" style="color: #ccc;font-size: 17px;margin-left: 10px;">&#xe60f;</i></div>
 				</div>
 			</div>
 			<div class="new-supply-item" ng-if="data.address">
@@ -123,7 +126,7 @@
 			<div class="supply-item"  style="color:red" ng-show="tbform.destination.$dirty && tbform.destination.$invalid ">
 				<small class="error" ng-show="tbform.destination.$error.required">地址必填</small>
 			</div>
-	        <div class="title" ng-if="data.bank_account"><i class="iconfont" style="color: #999;font-size: 17px;margin-right: 10px;vertical-align: -1px;">&#xe631;</i>银行卡信息<span class="state">用于期交产品后期续费</span></div>
+	        <div class="title" ng-if="data.bank_account"><i class="iconfont" style="color: #999;font-size: 17px;margin-right: 8px;vertical-align: -1px;">&#xe631;</i>银行卡信息<span class="state">用于期交产品后期续费</span></div>
 			<div class="new-title" ng-if="data.bank"></div>
 	 		<div class="new-supply-item" ng-if="data.bank_account">
 				<div class="introd">银行</div>
