--- a/app/sass/toubao_new.scss
+++ b/app/sass/toubao_new.scss
@@ -134,6 +134,10 @@ body{
 	}
 	select{
 		border: none;
+		background: #fff;
+		option {
+			background: #fff;
+		}
 	}
     
 	.supply-item{
@@ -188,7 +192,11 @@ body{
 		.content{
 			padding-right:10px;
 			@include flex(1);
+			font-size: 13px;
 			// @include border(0 0 1px 0,#e2e2e2)
+			input {
+				padding-left: 5px;
+			} 
 		}
 		.content input::input-placeholder {
 		  color: #ccc;
@@ -218,7 +226,7 @@ body{
 			-webkit-appearance:none;
 			height:45px;
 			border:none;
-			font-size: 15px;
+			// font-size: 15px;
 		}
 		.new-input::-webkit-input-placeholder { 
 			color:#ccc;
@@ -296,3 +304,20 @@ body{
 	}
 
 }
+#first_option_color{
+	color: #ccc;
+}
+/*ios底部fixed失效的问题的解决方案*/
+.prePromise {
+   position: fixed;
+    top: 0;
+    bottom: .48rem;
+    /* 使之可以滚动 */
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+
+}
+// .city {
+// 	background: url("../img/global/arrows.png") no-repeat right;
+// 	background-size: 8px;
+// }
