--- a/app/template/new/product_16.html
+++ b/app/template/new/product_16.html
@@ -8,7 +8,7 @@
 	<div class="introd-container">
 		<div class="detail-container">
 			<div>
-				<img src="img/product/rbseyy01.png" ></div>
+				<img src="img/product/rbseyw01.png" ></div>
 		</div>
 	</div>
 	<!--
