--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -71,7 +71,7 @@
             <div class="progress"><div class="progress_innerbar"  style="width:{{data.scores[1]*10}}%;"></div></div></div>
           <i class="iconfont arrow_size"  >&#xe60f;</i>
           </div> 
-         <!-- 暂时隐藏 -->
+         <!-- 暂时隐藏 *tailu*-->
          <div class="pannel__body__item"  ng-click="goContinue()" style="display: none;">
           <i class="iconfont icon_size" >&#xe618;</i>
           <div class="pannel__body__item_bar"> 
