--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -81,6 +81,12 @@
 			<span class="money_size">{{detailMoney | number}}</span>元<span ng-show="plan.premium_type==2">起</span>
 		</a>
 	</div>
+	<!-- <div class="sx-bzts_bottom">
+		<div class="sx-bzts_bottom-word" style="">
+			应交保费 <span class="buttom_money">{{detailMoney | number}}</span> 元<span ng-show="plan.premium_type==2">起</span>
+		</div>
+		<div class="sx-bzts_bottom-btn back_color liji right" ng-click="showMask()" id="showMask">立即投保</div>
+	</div> -->
 </div>
 <div  class="mask" id="detail_mask_container"  style="display: none;z-index:900">
 	    <div style="height: 20%"></div>
