--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -158,8 +158,8 @@
 			
 		</div>
     </div>
-    <div class="fix_container">
-		<a href="javascript:void(0)"  style="height:45px;line-height: 45px;"  ng-click="submit()"  class="btn btn_n_primary">确定</a>
+	<div class="bottom_ctrl">
+		<div class="finish"  ng-click="submit()">确定</div>
 	</div>
 </div>
 
