--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -41,7 +41,7 @@
 
 			<!-- <div class="supply-info" > -->
 
-			<div class="title" ><i class="iconfont" style="color: #999;font-size: 17px;margin-right: 5px;vertical-align: -1px;">&#xe611;</i>投保人补充信息</div>
+			<div class="title" ><i class="iconfont" style="color: #999;font-size: 17px;margin-right: 5px;vertical-align: -1px;">&#xe611;</i>联系信息</div>
 			<div class="new-supply-item" ng-if="data.email">
 				<div class="introd">电子邮箱</div>
 				<div class="content"><input type="email" placeholder="例：example@nuobei.cn" name="email" ng-model="user.email" class="new-input"  required></div>
@@ -72,7 +72,7 @@
 				<div class="content"><input type="text" ng-minlength="6" ng-maxlength="6" placeholder="请输入邮政编码" name="post" ng-model="user.post" class="new-input"  required></div>
 			</div>
 			<div class="kong"></div>
-			<div class="title" ><i class="iconfont" style="color: #999;font-size: 17px;margin-right: 5px;vertical-align: -1px;">&#xe611;</i>被保人补充信息</div>
+			<div class="title" ><i class="iconfont" style="color: #999;font-size: 17px;margin-right: 5px;vertical-align: -1px;">&#xe611;</i>补充信息</div>
 			<div class="new-supply-item"  ng-show="data.jobs.length>0">
 				<div class="introd">职业</div>
 				<div class="content" id="job"><select class="content" ><option id="first_option_color">请选择职业</option><option data-value="{{jobs.job_id}}" ng-repeat="jobs in data.jobs">{{jobs.job_name}}</option></select></div>
