--- a/app/css/solution.css
+++ b/app/css/solution.css
@@ -225,7 +225,7 @@ body {
         color: #999;
         font-size: 13px; }
       .solution li .product .product-price {
-        color: #ff5c00; }
+        color: #ff9000; }
       .solution li .product .status {
         background-color: #999;
         color: #fff;
