--- a/app/partials/bd_pic.html
+++ b/app/partials/bd_pic.html
@@ -115,8 +115,6 @@ body{
 	</ul>
 
 </div>
-<div class="fixed-btn-container" >
-	<div class="cell " >
-		<a href="javascript:void(0)" ng-click="uploadImg()"  class="btn btn_n_primary " >上传照片</a>
-	</div>
+<div class="bottom_ctrl">
+	<div class="finish" ng-click="uploadImg()">下一步</div>
 </div>
