--- a/app/partials/bdm_verfylist.html
+++ b/app/partials/bdm_verfylist.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=1a758ccd04550e9103b821164fec34a9">
+<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=bded96c36402269b1b66868cf4e8af62">
 <style>
 
 .pei_button{
@@ -76,6 +76,11 @@
 	height: 86px;
 }
 </style>
+<div class="nuobei_header">
+	<div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+	<div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+	<div class="concern" id="foucs_button">关 注</div>
+</div>
 <div class="container"  cg-busy="loadingPromise">
 	
 
