--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -64,7 +64,7 @@
 
             <!-- <div class="pannel__body__item"  ng-click="goBaodan(1)"> -->
             <!-- 二期修改   *tailu*-->
-            <div class="pannel__body__item"  ng-click="goContinue()">
+            <div class="pannel__body__item"  ng-click="gofamily_education(1)">
           <i class="iconfont icon_size" >&#xe62f;</i>
           <div class="pannel__body__item_bar"> 
             <div class="pannel__body__item_yiyou">家庭保障</div>
