--- a/app/partials/pay_success.html
+++ b/app/partials/pay_success.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" type="text/css" href="css/pay_success.css">
 <div class="pay_success_ctrl">
 	<div class="win">
-		<img src="wx_share/img/win.jpg"> &nbsp;支付成功，投保中...
+		<img src="wx_share/img/win.png"> &nbsp;支付成功，投保中...
 	</div>
-	<div class="hint">请按照一下操作<br>查看投保记录，获取电子保单</div>
+	<div class="hint">请按照以下操作<br>查看投保记录，获取电子保单</div>
 	
 	<!-- <div class="main">
 		<div class="main_left">
@@ -19,4 +19,4 @@
 		<img src="img/tishi.jpg">
 	</div> -->
 </div>
-<div class="main"> <img src="img/win_hint/new_main.png"></div>
+<div class="main"> <img src="img/win_hint/main.png"></div>
