--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -211,7 +211,7 @@ body {
 				font-size:13px;
 			}
 			.product-price{
-				color:#ff5c00;
+				color:#ff9000;
 			}
 			.status{
 				background-color: #999;
