--- a/app/wx_share/css/coupon.css
+++ b/app/wx_share/css/coupon.css
@@ -1,3 +1,6 @@
+.wrapper {
+  background-color: rgb(243, 243, 243);
+} 
 ul{
   margin:0;
 }
@@ -61,7 +64,9 @@ ul{
 .list_item{
   padding:10px 30px;margin-bottom:10px;background-color: #FFF;
 }
-
+.list_item:nth-child(1) {
+  margin: 0 auto;
+}
 .order_img{
   width:70px;height:70px;margin:0px 10px 0 0
 }
@@ -242,3 +247,4 @@ ul{
 .default_text{
    margin-top:200px;text-align:center;color:#D1D1D1;display: none;
 }
+
