--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -13,16 +13,16 @@ header {
     overflow: hidden;
     line-height: 0; }
     header .top-container .company {
-      background-color: #fff;
-      color: #588dd4;
-      padding: .02rem .1rem;
+      background-color: #6282a6;
+      color: #fff;
+      padding: .03rem .09rem;
       text-align: center;
       position: absolute;
-      top: 0;
-      right: 10px;
-      border-bottom-left-radius: 3px;
-      border-bottom-right-radius: 3px;
-      line-height: .2rem; }
+      top: .13rem;
+      right: 0;
+      border-radius: 5px 0 0 5px;
+      line-height: .2rem;
+      font-size: .019rem; }
     header .top-container .title {
       font-size: 18px; }
     header .top-container .sub-title {
@@ -238,8 +238,7 @@ header {
   width: 35%;
   border-radius: 0; }
 .money_size {
-  font-size: .27rem;
-  color: #ff5c00; }
+  font-size: .27rem; }
 .head_ctrl {
   height: 3rem;
   overflow: auto;
