--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -81,7 +81,7 @@
 				<div class="des">
 					<span class="hot" ng-if="insurance.status==4">热卖</span>
 					<span class="special_offer" ng-if="insurance.status==5">特惠</span> {{insurance.description}}</div>
-				<div class="money">{{insurance.front_price}}</div>
+				<div class="money orange">{{insurance.front_price}}</div>
 			</div>
 		</div>	
 	</div>
