--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -6,7 +6,7 @@
 					<div>请填写被保人、投保人信息</div>				
 				</div>
 				<div ng-show="!isFirst">
-					<div class="name">{{data.insured.username}}<span class="tag">被保人<span class="insured">（{{userRelation}}）</span></span></div>
+					<div class="name">{{data.insured.username}}<span class="tag">被保人<span class="orange">（{{userRelation}}）</span></span></div>
 					<div class="mobile">手机号：{{data.insured.mobile}}</div>
 					<div class="card">证件号：{{data.insured.social_id}}</div>
 					<div >投保人：{{data.user.username}}<!-- (被保人{{userRelation}}) --></div>
@@ -22,7 +22,7 @@
 					<div class="product">	
 						<div class="name">{{plan.name}}</div>	
 						<div class="duration" ng-show="plan.startDate && plan.endDate && plan.coverage_period_type!=1">{{plan.startDate | date:'yyyy-MM-dd'}}至{{plan.endDate | date:'yyyy-MM-dd'}}</div>
-						<div class="reason">{{getTaocanReason(plan.status)}}</div>
+						<div class="orange">{{getTaocanReason(plan.status)}}</div>
 
 						<div class="reason"  ng-show="tbform.effectivedate.$dirty && tbform.effectivedate.$invalid ">
 							<small class="error" ng-show="tbform.effectivedate.$error.required">生效日期必填</small>
@@ -32,7 +32,7 @@
 						<div class="money">保额:{{processSpecialMoney(plan.sum_insured)}}  &nbsp;&nbsp;<span ng-show="plan.coverage_period_type!=1">保{{coverage_period ||  plan.coverage_period}}</span>{{getCoverageType(plan.coverage_period_type)}}</div>
 					</div>
 					<div class="money-container">
-						<span class="fee">{{plan.premium}}元</span>		<span class="fr" style="display: none">20年交清  <span class="modify">修改</span></span>
+						<span class="fee orange">{{plan.premium}}元</span>		<span class="fr" style="display: none">20年交清  <span class="modify">修改</span></span>
 					</div>
 				</li>
 			</ul>
