--- a/app/sass/bd_education_new.scss
+++ b/app/sass/bd_education_new.scss
@@ -103,7 +103,7 @@
 	}
 	.table-container{
 		margin-top:15px;
-			
+	    @include border(0 0 1px 0,#ccc);
 		background-color:#fff;
 		color:#555555;
 		.table-title{
@@ -148,5 +148,12 @@
 		
 	}
 	
-
+.age-insurance{
+    background-color: #fff;
+    padding:20px 10px;
+    color:#555;
+    font-size:13px;
+    text-align: center;
+    @include border(0 0 1px 0,#ccc);
+}
 	
