wxsuccess_couponn img

--- a/app/wx_share/partials/success_coupon.html
+++ b/app/wx_share/partials/success_coupon.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="hints">请按照以下步骤使用优惠劵</div>
 </div>
-<div class="main"> <img src="img/win_hint/new_main.png"></div>
+<div class="main"> <img src="img/win_hint/back_code.png"></div>
 
 
 
