--- a/app/css/recognizee.css
+++ b/app/css/recognizee.css
@@ -37,11 +37,10 @@ select {
     padding: 0 10px;
     border-bottom: 1px solid #c4c4c4; }
     .recognizee_contrl .regenizee_main .cell {
-      padding: 0 0 10px .96rem;
+      padding: 0 0 10px 96px;
       margin-left: 3px;
       box-sizing: border-box; }
       .recognizee_contrl .regenizee_main .cell small {
-        color: #ff5c00;
         font-size: 13px; }
     .recognizee_contrl .regenizee_main .bottom_line {
       border-bottom: 1px solid #e2e2e2; }
