--- a/app/partials/bd_education_new.html
+++ b/app/partials/bd_education_new.html
@@ -105,7 +105,7 @@
     </table>
     </div>
      <div class="more"  ng-show=" data.coverages.length > 7" data-switch="on"  ng-click="more($event)">
-         <span>查看更多</span><div class="icon-arrow" ></div>
+         <span style="color:#4285f4;">查看更多</span><div class="icon-arrow" ></div>
       </div>
     <div class="noresult" ng-if="!data.coverages || data.coverages.length==0">
       您暂时没有任何保障 
