--- a/app/sass/bd_education_new.scss
+++ b/app/sass/bd_education_new.scss
@@ -17,15 +17,15 @@
 		font-size: 15px;
 	}
 	header.icon_4{
-		background: #006ee9 url('../img/bd_education/plane.png') no-repeat 18px center;
+		background: #4285f4 url('../img/bd_education/plane.png') no-repeat 18px center;
 		background-size: 20px;
 	}
 	header.icon_3{
-		background: #006ee9 url('../img/health_icon.png') no-repeat 18px center;
+		background: #4285f4 url('../img/health_icon.png') no-repeat 18px center;
 		background-size: 20px;
 	}
 	header.icon_2{
-		background: #006ee9 url('../img/heart_icon.png') no-repeat 18px center;
+		background: #4285f4 url('../img/heart_icon.png') no-repeat 18px center;
 		background-size: 20px;
 	}
 	.table-title {
