--- a/app/sass/recognizee_compile.scss
+++ b/app/sass/recognizee_compile.scss
@@ -22,7 +22,7 @@ input {
 		border-radius: 5px;
 		line-height: 45px;
 		text-align: center;
-		background: #5aa8ff;
+		background: #4285f4;
 		font-size: 15px;
 		color: #fff;
 		border: qpx solid #ccc;
