--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -98,7 +98,7 @@ body {
 
 	}
 
-	background-color: #006ee9;
+	background-color: #4285f4;
 	color: #fff;
 	height: 70px;
 }
@@ -129,7 +129,7 @@ body {
 		}
 		.iconfont{
 			font-size: 16px;
-			color:#78A2DC;
+			color:#4285f4;
 		}
 		td{
 			padding: 0.1rem 0.05rem;
@@ -154,7 +154,7 @@ body {
 }
 .more {
 		background-color: #fff;
-		color: #588dd4;
+		color: #4285f4;
 		padding: 0.1rem;
 		text-align: center;
 		border-top:1px solid #e2e2e2;
