--- a/app/css/solution.css
+++ b/app/css/solution.css
@@ -78,7 +78,7 @@ body {
     vertical-align: -2px;
     color: #55a5ff; }
 .header {
-  background-color: #006ee9;
+  background-color: #4285f4;
   color: #fff;
   height: 70px; }
   .header .logo {
@@ -129,7 +129,7 @@ body {
       border-bottom: 1px solid #e2e2e2; }
     .table-wrapper table .iconfont {
       font-size: 16px;
-      color: #78A2DC; }
+      color: #4285f4; }
     .table-wrapper table td {
       padding: 0.1rem 0.05rem;
       text-align: center;
@@ -146,7 +146,7 @@ body {
       font-size: 14px; }
 .more {
   background-color: #fff;
-  color: #588dd4;
+  color: #4285f4;
   padding: 0.1rem;
   text-align: center;
   border-top: 1px solid #e2e2e2;
