--- a/app/css/toubao_new.css
+++ b/app/css/toubao_new.css
@@ -11,7 +11,7 @@ body {
 .main-wrapper {
   margin-bottom: 10px; }
 .people-container {
-  border-left: 5px solid #006ee9;
+  border-left: 5px solid #4285f4;
   border-bottom: 1px solid #ccc;
   background: #fff url("../img/solution/arrow.jpg") no-repeat 96% 50%;
   background-size: 8px;
@@ -336,7 +336,7 @@ body {
     height: 20px;
     vertical-align: -5px; }
   .tip a {
-    color: #55a5ff; }
+    color: #4285f4; }
 .footer {
   display: -webkit-box;
   display: -webkit-flex;
