--- a/app/partials/contact_list.html
+++ b/app/partials/contact_list.html
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="css/recognizee_compile.css?rev=9312f57c3611c13fa313f79fd7c2a425">
+<link rel="stylesheet" href="css/recognizee_compile.css?rev=c1ea042a22fb350336f9a283aa4fc3ba">
 <div class="recognizee_compile_ctrl" data-ng-init="init()"  cg-busy="secondPromise">
 	<div class="head_ctrl">
-		<div class="head" ng-click="addPeople()"><img src="wx_share/img/rc/jia.png" >  新增被保险人</div>
+		<div class="head" ng-click="addPeople()"><img src="wx_share/img/rc/jiahao.png" >  新增被保险人</div>
 	</div>
 	<div class="bor"></div>
 	<div class="main" ng-repeat="item in data" ng-click="choose($event,item)">
