--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -138,11 +138,12 @@
 </div>
 
 <div class="mask" id="baozhang_popup" style="display: none;">
-<div class="toast" >
-	<div class="close">
-		<img src="img/close.jpg" ></div>
-	<h4 >保障范围评分标准</h4>
-	<img  ng-src="img/introd_0{{type}}.png" style="width:100%"></div>
+	<div class="toast" >
+		<div class="close">
+			<img src="img/close.jpg" ></div>
+		<h4 >保障范围评分标准</h4>
+		<img  ng-src="img/introd_0{{type}}.png" style="width:100%">
+	</div>
 </div>
 <!-- <script src="js/slider.js?rev=afafafafafafafafsaffafaa"></script> -->
 <script src="js/select.js?rev=avaafafafafsdfafafafaags"></script>
