--- a/app/partials/update_add_contact.html
+++ b/app/partials/update_add_contact.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/recognizee.css?rev=11a5520b7647fca8f36a23d804640ec3">
+<link rel="stylesheet" href="css/recognizee.css?rev=f8b6f2225b5df09fabfba54830cf8369">
 <div class="recognizee_contrl">
 	<ul class="delete">
 		<li>被保人资料</li>
@@ -13,8 +13,8 @@
 					<input type="text" onclick="_hmt.push(['_trackEvent', 'update_add_contact', 'update_add_contact_name'])" ng-model="username"  name="username" onfocus="this.placeholder=''" onblur="this.placeholder='请输入被保人姓名'" placeholder="请输入被保人姓名" required chinese >
 			    </ul>
 			    <div class="cell"  style="color:red" ng-show="userform.username.$dirty && userform.username.$invalid">
-					<small class="error" ng-show="userform.username.$error.required">姓名必填</small>
-					<small class="error"  ng-show="userform.username.$error.chinese">姓名必须是汉字</small>
+					<small class="error orange" ng-show="userform.username.$error.required">姓名必填</small>
+					<small class="error orange"  ng-show="userform.username.$error.chinese">姓名必须是汉字</small>
 				</div>
 			</div>
 			
@@ -23,9 +23,9 @@
 					<li>身份证号</li><input type="text"  onclick="_hmt.push(['_trackEvent', 'update_add_contact', 'update_add_contact_id'])" ng-model="social_id" name="social_id" onfocus="this.placeholder=''" onblur="this.placeholder='请输入投保人的身份证号'" placeholder="请输入被保人身份证号" required  ng-minlength="18" ng-maxlength="18" >
 				</ul>
 				<div class="cell"  style="color:red" ng-show="userform.social_id.$dirty && userform.social_id.$invalid ">
-						<small class="error" ng-show="userform.social_id.$error.required">身份证必填</small>
-						<small class="error" ng-show="userform.social_id.$error.minlength">身份证必须是18位</small>
-						<small class="error" ng-show="userform.social_id.$error.maxlength">身份证必须是18位</small>
+						<small class="error orange" ng-show="userform.social_id.$error.required">身份证必填</small>
+						<small class="error orange" ng-show="userform.social_id.$error.minlength">身份证必须是18位</small>
+						<small class="error orange" ng-show="userform.social_id.$error.maxlength">身份证必须是18位</small>
 				</div>
 		    </div>
 			<div class="bottom_line">
@@ -33,11 +33,11 @@
 					<li>手机号码</li><input type="text" onclick="_hmt.push(['_trackEvent', 'update_add_contact', 'update_add_contact_number'])" ng-model="mobile" name="mobile" placeholder="用于接收保单信息" ng-minlength="11" ng-maxlength="11" required >
 				</ul>
 				<div class="cell"  style="color:red" ng-show="userform.mobile.$dirty && userform.mobile.$invalid ">
-					<small class="error" 
+					<small class="error orange" 
 			            ng-show="userform.mobile.$error.required">手机号必填</small>
-					<small class="error" 
+					<small class="error orange" 
 			                ng-show="userform.mobile.$error.minlength">手机号必须是11位数字</small>
-					<small class="error" 
+					<small class="error orange" 
 			                ng-show="userform.mobile.$error.maxlength" >手机号必须是11位数字</small>
 				</div>
 			</div>
@@ -67,7 +67,10 @@
 		</ul> -->
 	</div>
 </div>
-<div class="recognizee_btn" ng-click="save()">保 存</div>
+<!-- <div class="recognizee_btn" ng-click="save()">保 存</div> -->
+<div class="bottom_ctrl">
+	<div class="finish" ng-click="save()">保 存</div>
+</div>
 <div class="weui_dialog_confirm" id="dialog1" style="display: none;">
     <div class="weui_mask"></div>
     <div class="weui_dialog">
