--- a/app/sass/globe.scss
+++ b/app/sass/globe.scss
@@ -622,6 +622,8 @@ font-size:22px;font-style:normal;}
 }
 // 底部按钮 左右两个button
 .bd_education_bottom {
+    background: #fff;
+    z-index: 9999;
     width: 100%;
     @include border(1px 0 0 0,#ccc);
     position: fixed;
