--- a/app/sass/toubao_new.scss
+++ b/app/sass/toubao_new.scss
@@ -20,7 +20,7 @@ body{
 }
 
 .people-container {
-	border-left: 5px solid #006ee9;
+	border-left: 5px solid #4285f4;
 	border-bottom: 1px solid #ccc;
 	background: #fff url('../img/solution/arrow.jpg') no-repeat 96% 50%;
 	background-size: 8px;
@@ -274,7 +274,7 @@ body{
 		vertical-align:-5px;;
 	}
 	a{
-		color:#55a5ff;
+		color:#4285f4;
 	}	
 }
 
