--- a/app/wx_share/partials/fee_part.html
+++ b/app/wx_share/partials/fee_part.html
@@ -79,6 +79,18 @@
 		<form>
     </div>
 </div>
+<style>
+.bd_footer{
+	position:fixed;
+	width:100%;
+	height:50px;
+	line-height:50px;
+	color:#fff;
+	background-color:#547ade;
+	text-align:center;
+	bottom:0	;
+}
+</style>
 <footer class="bd_footer">
 	 <div  ng-click='submit()' id="submitButton"  >立即投保</div>
 </footer>
