修改图片相对路径

--- a/app/partials/jk_bzts.html
+++ b/app/partials/jk_bzts.html
@@ -1,4 +1,4 @@
-<script src="js/slider_component.js?rev=afafafafafafafafsaffafaa"></script>
+<script src="http://static.nuobei.cn/js/slider_component.js?rev=afafafafafafafafsaffafaa"></script>
 <link rel="stylesheet" href="http://static.nuobei.cn/css/ring.css">
 <link rel="stylesheet" href="http://static.nuobei.cn/css/jk_bzts.css">
 <div class="jk_bzts">
