--- a/app/partials/scheme.html
+++ b/app/partials/scheme.html
@@ -3,7 +3,7 @@
 	
 	<div class="main-contrller">
 		<div class="scheme-head">{{data.scheme_name}}</div>
-		<div class="img_ctrl"><img  ng-src="{{data.model_image_url}}" onerror="this.src='img/scheme/loading.png'" src=""></div>
+		<div class="img_ctrl"><img  ng-src="{{data.model_image_url}}" onerror="this.src='http://static.nuobei.cn/img/scheme/loading.png'" src=""></div>
 		<div class="scheme_word">{{data.description}}</div>
 		<div class="marBtn"></div>
 	</div>
