simple auto commit

--- a/app/template/new/product_202.html
+++ b/app/template/new/product_202.html
@@ -85,7 +85,7 @@
 			</li>
 			<li class="qa-item  question">
 				<div class="qa-icon "></div>	
-				<div class="qa-content"><div>这款产品由职业限制吗？</div></div>	
+				<div class="qa-content"><div>这款产品有职业限制吗？</div></div>	
 			</li>
 			<li class="qa-item answer">
 				<div class="qa-icon" ></div>	
