--- a/app/css/globe.css
+++ b/app/css/globe.css
@@ -348,7 +348,9 @@ h5 {
 .iconfont {
   font-family: "iconfont";
   font-size: 22px;
-  font-style: normal; }
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px; }
 .nuobei_header {
   padding: 7.5px 10px;
   background: #4285f4;
