--- a/app/sass/globe.scss
+++ b/app/sass/globe.scss
@@ -523,9 +523,15 @@ overflow: hidden;
                     
 
 
+
                     
-.iconfont{font-family:"iconfont";
-font-size:22px;font-style:normal;}
+.iconfont{
+  font-family:"iconfont";
+  font-size:22px;
+  font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+}
 
 
 .nuobei_header {
